Alteração nos README's

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-PORT= <porta em que a aplicação rodará (por padrão 8080)> 
+PORT= 8080
 MONGO_URL= <URL do MongoDB>
 MJ_APIKEY_PUBLIC= '<Chave Pública da API associada à conta do Mailjet>'
 MJ_APIKEY_PRIVATE= '<Chave Privada da API associada à conta do Mailjet>'
