--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,1 @@
-REACT_APP_API_BASE_URL= <Porta da Web API> 
-# Se estiver rodando a aplicação do ad-2019/backend e ad-2019/frontend na mesma máquina, provavelmente será "http://localhost:<porta escolhida>"
+REACT_APP_API_BASE_URL=http://localhost:8080
